feat(develop): updated package

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nx build",
     "build:affected": "nx affected:build --parallel --maxParallel=5",
     "e2e": "nx e2e --all",
-    "e2e:cli": "nx e2e --headless --all",
-    "e2e:affected:cli": "nx affected:e2e --parallel --maxParallel=5 --headless --all",
+    "e2e:cli": "nx e2e --all",
+    "e2e:affected:cli": "nx affected:e2e --parallel --maxParallel=5 --all",
     "test": "nx test -all",
     "test:affected": "nx affected:test --parallel --maxParalle=5 -all",
     "pre-commit": "lint-staged",
