feat(app): added scss system

--- a/nx.json
+++ b/nx.json
@@ -4,6 +4,13 @@
   "affected": {
     "defaultBase": "master"
   },
+  "implicitDependencies": {
+    "package.json": {
+      "dependencies": "*",
+      "devDependencies": "*"
+    },
+    ".eslintrc.json": "*"
+  },
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/nx-cloud",
