--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "nx",
-    "start": "nx serve --project=project-app",
-    "postinstall": "node ./decorate-angular-cli.js && husky install",
+    "start": "nx serve",
+    "start:app": "nx serve --project=project-app",
+    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main && husky install",
     "build": "nx build",
     "build:affected": "nx affected:build --parallel --maxParallel=5",
     "e2e": "nx e2e --all",
@@ -69,9 +70,12 @@
     "jest-preset-angular": "~12.2.3",
     "lint-staged": "^13.1.0",
     "nx": "15.4.5",
+    "postcss": "^8.4.21",
+    "postcss-scss": "^4.0.6",
     "prettier": "^2.8.2",
     "prettier-eslint": "^15.0.1",
     "pretty-quick": "^3.1.3",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
